fix: Update Render.com config with correct runtime and service references

--- a/render.yaml
+++ b/render.yaml
@@ -2,10 +2,25 @@
 # This file defines both services for automatic deployment
 
 services:
-  # Express Backend Server
+  # Python AI Service (FastAPI + CrewAI) - Deploy this FIRST
+  - type: web
+    name: resume-builder-ai
+    runtime: python
+    region: oregon
+    plan: free
+    rootDir: ai_service
+    buildCommand: pip install -r requirements.txt
+    startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
+    envVars:
+      - key: GOOGLE_API_KEY
+        sync: false  # Set this manually in Render dashboard
+      - key: PYTHONUNBUFFERED
+        value: "1"
+
+  # Express Backend Server - Depends on AI service
   - type: web
     name: resume-builder-backend
-    env: node
+    runtime: node
     region: oregon
     plan: free
     rootDir: server
@@ -16,24 +31,6 @@ services:
         value: production
       - key: AI_SERVICE_URL
         fromService:
-          type: web
           name: resume-builder-ai
-          property: hostport
-          # This will be like: resume-builder-ai.onrender.com
-      - key: PORT
-        value: 5000
-
-  # Python AI Service (FastAPI + CrewAI)
-  - type: web
-    name: resume-builder-ai
-    env: python
-    region: oregon
-    plan: free
-    rootDir: ai_service
-    buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
-    envVars:
-      - key: GOOGLE_API_KEY
-        sync: false  # You'll need to set this manually in Render dashboard
-      - key: PYTHONUNBUFFERED
-        value: "1"
+          type: web
+          property: host
