--- a/ai_service/requirements.txt
+++ b/ai_service/requirements.txt
@@ -1,24 +1,23 @@
 # Resume Builder AI Service - Python Dependencies
-# For Render.com deployment
+# Tested versions for Render.com deployment
 
 # Web framework
-fastapi==0.109.0
-uvicorn[standard]==0.27.0
+fastapi>=0.100.0
+uvicorn[standard]>=0.23.0
 
 # CrewAI for multi-agent orchestration
-crewai==0.95.0
-crewai-tools==0.17.0
+crewai>=0.28.0
 
 # Google Gemini LLM
-google-generativeai==0.8.0
+google-generativeai>=0.3.0
 
 # PDF processing
-PyPDF2==3.0.1
-python-multipart==0.0.9
+PyPDF2>=3.0.0
+python-multipart>=0.0.6
 
 # Environment
-python-dotenv==1.0.1
-pydantic==2.5.3
+python-dotenv>=1.0.0
+pydantic>=2.0.0
 
-# HTTP client
-httpx==0.27.0
+# HTTP client (required by CrewAI)
+httpx>=0.25.0
