--- a/ai_service/requirements.txt
+++ b/ai_service/requirements.txt
@@ -1,12 +1,12 @@
 # Resume Builder AI Service - Python Dependencies
-# Tested versions for Render.com deployment
+# For Render.com deployment - requires Python 3.11
 
 # Web framework
-fastapi>=0.100.0
+fastapi>=0.100.0,<1.0.0
 uvicorn[standard]>=0.23.0
 
-# CrewAI for multi-agent orchestration
-crewai>=0.28.0
+# CrewAI for multi-agent orchestration (Python 3.11 compatible)
+crewai>=0.80.0,<1.0.0
 
 # Google Gemini LLM
 google-generativeai>=0.3.0
@@ -19,5 +19,9 @@ python-multipart>=0.0.6
 python-dotenv>=1.0.0
 pydantic>=2.0.0
 
-# HTTP client (required by CrewAI)
+# HTTP client
 httpx>=0.25.0
+
+# Required by CrewAI
+langchain>=0.1.0,<1.0.0
+langchain-community>=0.0.10
