--- a/ai_service/requirements.txt
+++ b/ai_service/requirements.txt
@@ -2,13 +2,10 @@
 # For Render.com deployment - requires Python 3.11
 
 # Web framework
-fastapi>=0.100.0,<1.0.0
+fastapi>=0.100.0
 uvicorn[standard]>=0.23.0
 
-# CrewAI for multi-agent orchestration (Python 3.11 compatible)
-crewai>=0.80.0,<1.0.0
-
-# Google Gemini LLM
+# Google Gemini LLM (direct, no CrewAI for simpler deployment)
 google-generativeai>=0.3.0
 
 # PDF processing
@@ -18,10 +15,3 @@ python-multipart>=0.0.6
 # Environment
 python-dotenv>=1.0.0
 pydantic>=2.0.0
-
-# HTTP client
-httpx>=0.25.0
-
-# Required by CrewAI
-langchain>=0.1.0,<1.0.0
-langchain-community>=0.0.10
