--- a/server/package.json
+++ b/server/package.json
@@ -13,8 +13,7 @@
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "form-data": "^4.0.0",
-        "multer": "^1.4.5-lts.1",
-        "puppeteer": "^21.6.0"
+        "multer": "^1.4.5-lts.1"
     },
     "devDependencies": {
         "nodemon": "^3.0.2"
